<resources>
    <string name="app_name">OptiMix</string>
    <string name="edit_message">Unos poruke</string>
    <string name="button_send">Pošalji</string>
    <string name="button_login">Prijava</string>
    <string name="input_text_password">Password</string>
    <string name="input_text_username">Username</string>
    <string name="username">Korisničko ime</string>
    <string name="username_input">ja</string>
    <string name="password">Lozinka</string>
    <string name="password_input">ti</string>

    <!-- Create user -->
    <string name="person_name">Ime</string>
    <string name="person_surname">Prezime</string>
    <string name="person_desc">Opis</string>
    <string name="create_user">Dodaj</string>
    <string name="username_error">Wrong username!</string>
    <string name="password_error">Wrong password!</string>
    <!--Create recipe-->
    <string name="material_amount">Postotak</string>
    <string name="material_amount_dots">Količina</string>
    <string name="recipe_name">Ime recepture</string>
    <string name="material_addition">Dodaj novu sirovinu</string>
    <string name="error_message">Postotak sirovina prelazi 100!</string>

    <string name="internet_error">Cannot connect to server, please check your internet connection</string>
    <string name="radio_technician">Tehničar</string>
    <string name="radio_chemist">Kemičar</string>
    <string name="list_authority">Ovlast:</string>
...
    <string name="calculation_recipe_name">Ime recepta za izračun:</string>
    <string name="calculation_full_amount">Količina proizvoda:</string>
    <string name="percentage_sign">%</string>
    <string name="amount_sign">kg</string>
    <string name="calculation_make">Napravi izračun</string>
    <string name="calculation_made_name">Izračun za recept:</string>
    <string name="calculation_preview">Ispis izračuna</string>
    <string name="document_print_modular">Ispiši dokument</string>
    <string name="document_create_pdf">Kreiraj pdf</string>
	<string name="raw_ux_holder">U-X broj:</string>
    <string name="raw_name_holder">Sirovina:</string>

    <string name="calculation_made_item_name">Naziv sirovine:</string>
    <string name="calculation_made_item_amount">Količina sirovine:</string>

...
