<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    android:padding="15dp">

    <LinearLayout
        android:id="@+id/relativ_tata"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/calculation_recipe_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:gravity="center"
            android:text="@string/calculation_recipe_name"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColorHighlight="@android:color/darker_gray"
            android:textColorHint="@android:color/darker_gray" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:orientation="horizontal">

            <android.support.v7.widget.AppCompatSpinner
                android:id="@+id/recipe_spinner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1">

            </android.support.v7.widget.AppCompatSpinner>

            <!-- Raw amount -->
            <EditText
                android:id="@+id/recipe_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:hint="@string/material_amount_dots"
                android:inputType="numberDecimal"
                android:textColor="@android:color/black"
                android:textColorHighlight="@android:color/darker_gray"
                android:textColorHint="@android:color/darker_gray" />

            <!-- Percentage sign -->
            <TextView
                android:id="@+id/percentage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:gravity="center"
                android:text="@string/amount_sign"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColorHighlight="@android:color/darker_gray"
                android:textColorHint="@android:color/darker_gray" />

        </LinearLayout>

        <Button
            android:id="@+id/preview_of_calculations"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="15dp"
            android:background="@drawable/buttonstyle_calculation"
            android:textColor="@color/white"
            android:text="@string/calculation_preview" />

        <LinearLayout
            android:id="@+id/insertion_calculation_point"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:orientation="horizontal">

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_recipe_calculation_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="invisible">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/calculation_made"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:gravity="center"
                    android:text="@string/calculation_made_name"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="@android:color/darker_gray" />

                <TextView
                    android:id="@+id/calculation_made_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:gravity="center"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/calculation_full_amount"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="@android:color/darker_gray" />


                <TextView
                    android:id="@+id/calculation_full_amount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="@color/colorPrimaryDark" />

            </LinearLayout>

        </LinearLayout>

        <ListView
            android:id="@+id/listViewRecipes"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="50dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/document_create_pdf"
            android:id="@+id/document_create_pdf"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/document_print_modular"
            android:id="@+id/document_print_modular"/>
    </LinearLayout>


</RelativeLayout>





