...
                    android:inputType="textPassword"
                    android:text="@string/password_input" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/ButtonLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/buttonstyle"
                android:clickable="true"
                android:onClick="mainButtonClick"
...
