...

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/add_new_raw_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:padding="15dp"
                    android:text="@string/material_addition" />
            </RelativeLayout>
...
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/image_logo_margin_top" />

                <!-- Submit button -->

                <Button
                    android:id="@+id/submit_recipe_button"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="20dp"

                    android:background="@drawable/buttonstyle"
                    android:clickable="true"
...
